--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,4 +9,29 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --background-color: #000028;
+  --accent-color: #FF0070;
+  --text-shadow-color: #FF0070;
+  --main-title-color: #DB00FF;
+  --content-title-color: #FF0070;
+  --content-subtitle-color: #000028;
+  --content-text-color: #F1B2CE;
+  --decor-zone-color: #FF0070;
+}
+
+:root {
+  
+}
+
+.page.theme_dark .header {
+  background-image: url(../images/cover-image-dark.png);
+}
+
+.page.theme_dark .header .record__text {
+  color: var(--accent-color);
+}
+
+.page.theme_dark .header .record__icon::after {
+  background-color: var(--accent-color);
+  filter: drop-shadow(0px 0px 4px var(--accent-color));
 }
