--- a/styles/light.css
+++ b/styles/light.css
@@ -9,4 +9,33 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --background-color: #FFF1F7;
+  --accent-color: #FF8DCB;
+  --text-shadow-color: #FF0070;
+  --main-title-color: #FFC2E6;
+  --content-title-color: #353430;
+  --content-subtitle-color: var(--content-title-color);
+  --content-text-color: var(--content-title-color);
+  --decor-zone-color: #353430;
+}
+
+:root {
+
+}
+
+.page.theme_light .header {
+  background-image: url(../images/cover-image-light.png);
+}
+
+.page.theme_light .header__theme-menu-button:hover {
+  outline: 1px solid rgba(50, 49, 45, 0.40);
+}
+
+.page.theme_light .header .record__text {
+  color: var(--background-color);
+}
+
+.page.theme_light .header .record__icon::after {
+  background-color: var(--background-color);
+  filter: drop-shadow(0px 0px 5px var(--background-color));
 }
