--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,719 @@
 
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  font-family: IBM Plex Mono;
+  font-style: normal;
+  background-color: var(--background-color);
+  max-width: 1024px;
+}
+
+.header {
+  position: relative;
+  padding: 20px;
+  max-width: 100%;
+  height: 768px;
+  background-image: url(../images/cover-image.png);
+  background-size: cover;
+  background-position: center;
+  display: grid;
+  grid-template-rows: 1fr auto 1fr;
+  grid-template-columns: 1fr;
+}
+
+@media screen and (375px < width <= 768px) {
+  .header {
+    min-height: 1024px;
+  }
+}
+
+@media screen and (width <= 375px) {
+  .header {
+    grid-template-rows: 1fr auto 1fr;
+    padding: 0;
+    max-height: 668px;
+  }
+}
+
+.decorated-zone::before {
+  position: absolute;
+  content: '';
+  display: block;
+  width: 25px;
+  height: 25px;
+  border-top: 1px solid var(--decor-zone-color);
+  border-right: 1px solid var(--decor-zone-color);
+  top: 20px;
+  right: 20px;
+}
+
+.decorated-zone::after {
+  position: absolute;
+  content: '';
+  display: block;
+  width: 25px;
+  height: 25px;
+  border-left: 1px solid var(--decor-zone-color);
+  border-bottom: 1px solid var(--decor-zone-color);
+  bottom: 20px;
+  left: 20px;
+}
+
+@media screen and (width <= 375px) {
+  .decorated-zone::before {
+    top: 10px;
+    right: 10px;
+  }
+  
+  .decorated-zone::after {
+    bottom: 10px;
+    left: 10px;
+  }
+}
+
+.record {
+  position: absolute;
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  top: 20px;
+  right: 55px;
+  display: flex;
+  align-items: center;
+  gap: 9px;
+}
+
+@media screen and (width <= 375px) {
+  .record {
+    top: 10px;
+    right: 45px;
+  }
+}
+
+.record__text {
+  color: var(--accent-color);
+  text-align: center;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 25px;
+}
+
+.record__icon {
+  display: block;
+  width: 25px;
+  height: 25px;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-self: center;
+}
+
+.record__icon::after {
+  content: '';
+  display: block;
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+}
+
+.header__theme-menu-list {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  list-style-type: none;
+  text-align: center;
+  color: var(--content-title-color);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 18px;
+}
+
+@media screen and (width <=768px) {
+  .header__theme-menu-list {
+    margin-block-start: 175px;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 15px;
+  }
+}
+
+@media screen and (width <=375px) {
+  .header__theme-menu-list {
+    margin-block-start: 75px;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 15px;
+    margin-right: 10px;
+  }
+}
+
+.header__theme-menu-item {
+  margin: 0 7px;
+  display: inline-block;
+}
+
+.header__theme-menu-button {
+  border: none;
+  outline: none;
+  text-decoration: none;
+  background: transparent;
+}
+
+.header__theme-menu-button_active {
+  outline: 1px solid var(--content-title-color);
+  outline-offset: 5px;
+}
+
+.header__theme-menu-button:hover {
+  outline: 1px solid rgba(255, 0, 112, 0.40);
+  outline-offset: 5px;
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.header__theme-menu-button:focus-visible::after {
+  content: "";
+  display: block;
+  height: 1px;
+  max-width: 140%;
+  /* Adjust this value to control the length of the underline */
+  background-color: var(--content-title-color);
+  /* Change this to the color you want for the underline */
+  position: relative;
+  left: -20%;
+  /* Adjust this value to center the underline */
+}
+
+button:disabled {
+  pointer-events: none;
+}
+
+.header__title {
+  max-width: 759px;
+  max-height: 130px;
+  margin-left: -20px;
+  color: var(--main-title-color);
+  text-shadow: 4px 4px 0px var(--text-shadow-color);
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem) ;
+  font-weight: 700;
+  line-height: 82.5%;
+  /* 129.525px */
+  text-align: left;
+  justify-self: left;
+  align-self: center;
+}
+
+@media screen and (width <= 375px) {
+  .header__title {
+    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    max-width: 355px;
+    max-height: 192px;
+    margin-left: 10px;
+  }
+}
+
+.header__text {
+  max-width: 491px;
+  max-height: 71px;
+  color: #000028;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 23.4px;
+  /* 130% */
+  background-color: var(--accent-color);
+  justify-self: right;
+  align-self: center;
+}
+
+@media screen and (width <= 786px) {
+  .header__text {
+    max-height: 117px;
+    max-width: 365px;
+  }
+}
+
+@media screen and (width <= 375px) {
+  .header__text {
+    max-width: 355px;
+    margin-right: 10px;
+    margin-bottom: 10px;
+  }
+}
+
+.content__title {
+  color: var(--content-subtitle-color);
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 23.4px;
+  /* 130% */
+  background-color: var(--accent-color);
+}
+
+.content__text {
+  color: var(--content-text-color);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 23.4px;
+  /* 130% */
+}
+
+.content__link {
+  text-decoration: none;
+  text-shadow: 2px 2px 0px var(--accent-color);
+}
+
+.content__link:hover {
+  border-bottom: 1px solid var(--content-text-color);
+}
+
+.content__link:focus {
+  outline: none;
+}
+
+.content__link:focus-visible {
+  outline: 1px solid var(--content-text-color);
+}
+
+.section_explanation {
+  max-width: 1024px;
+  max-height: 508px;
+  margin-top: 60px;
+  padding: 0 20px;
+  display: flex;
+  gap: 20px;
+}
+
+@media screen and (375px < width <= 768px) {
+  .section_explanation {
+    min-height: 648px;
+  }
+}
+
+@media screen and (width <= 375px) {
+  .section_explanation {
+    width: 1024px;
+    min-height: 949px;
+    margin-top: 40px;
+    padding: 0 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+}
+
+.section_explanation__title {
+  width: 315px;
+  height: 47px;
+  margin-bottom: 20px;
+  color: var(--content-title-color);
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 23.4px;
+  /* 130% */
+}
+
+@media screen and (width <= 375px) {
+  .section_explanation__title {
+    margin-bottom: 0px;
+  }
+}
+
+.section_explanation__content {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+@media screen and (375px < width <= 768px) {
+  .section_explanation__content {
+    margin-left: 7px;
+  }
+}
+
+@media screen and (width <= 375px) {
+  .section_explanation__content {
+    max-width: 355px;
+  }
+}
+
+.explanation_card {
+  max-width: 650px;
+}
+
+.explanation_card .content__title {
+  margin-bottom: 10px;
+}
+
+.section_reasons {
+  width: 1024px;
+  height: 498px;
+  padding: 0 20px;
+  margin-top: 80px;
+  margin-bottom: 80px;
+}
+
+@media screen and (375px < width <= 768px) {
+  .section_reasons {
+    height: 755px;
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (width <= 375px) {
+  .section_reasons {
+    height: 1119px;
+    padding: 0 10px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+}
+
+.section_reasons__title {
+  width: 315px;
+  height: 47px;
+  margin-bottom: 20px;
+  color: var(--content-title-color);
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 23.4px;
+  /* 130% */
+}
+
+@media screen and (375px < width <= 768px) {
+  .section_reasons__title {
+    max-width: 236px;
+    min-height: 70px;
+    margin-bottom: 20px;
+  }
+}
+
+.section_reasons__content {
+  display: flex;
+  gap: 20px;
+}
+
+@media screen and (width <= 768px) {
+  .section_reasons__content {
+    max-width: 728px;
+    flex-direction: column;
+  }
+}
+
+@media screen and (width <= 375px) {
+  .section_reasons__content {
+    max-width: 355px;
+  }
+}
+
+.reason_card {
+  min-width: 315px;
+}
+
+.reason_card .content__title {
+  margin-bottom: 10px;
+}
+
+.section_advices {
+  width: 1024px;
+  height: 1015px;
+  padding: 0 20px;
+  display: flex;
+  gap: 20px;
+  margin-bottom: 80px;
+}
+
+@media screen and (width <= 768px) {
+  .section_advices {
+    min-height: 1297px;
+  }
+  
+}
+
+@media screen and (width <= 375px) {
+  .section_advices {
+    min-height: 1707px;
+    flex-direction: column;
+    padding: 0 10px;
+  }
+  
+}
+
+.section_advices__title {
+  max-width: 315px;
+  height: 47px;
+  margin-bottom: 20px;
+  color: var(--content-title-color);
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 23.4px;
+}
+
+@media screen and (width <= 768px) {
+  .section_advices__title {
+    max-width: 236px;
+  }
+  
+}
+
+@media screen and (width <= 375px) {
+  .section_advices__title {
+    max-width: 355px;
+    margin-bottom: 23px;
+  }
+  
+}
+
+.first_card_empty {
+  margin-bottom: -10px;
+}
+
+.section_advices__content {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+@media screen and (375px < width <= 768px) {
+  .section_advices__content {
+    max-width: 472px;
+  }
+}
+
+@media screen and (width <= 375px) {
+  .section_advices__content {
+    max-width: 355px;
+  }
+}
+
+.section_images {
+  padding: 0 20px;
+  margin-bottom: 60px;
+}
+
+@media screen and (width <= 768px) {
+  .section_images {
+  }
+  
+}
+
+@media screen and (width <= 375px) {
+  .section_images {
+    padding: 0 10px;
+    margin-bottom: 40px;
+  }
+  
+}
+
+.section_images__title {
+  max-width: 1024px;
+  color: #000028;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 23.4px;
+  /* 130% */
+  background-color: var(--accent-color);
+  margin-bottom: 20px;
+}
+
+@media screen and (width <= 768px) {
+  .section_images__title {
+  }
+}
+
+@media screen and (width <= 375px) {
+  .section_images__title {
+
+    margin-bottom: 10px;
+  }
+}
+
+.section_images__content {
+  max-width: 1024px;
+  display: grid;
+  grid-template-columns: repeat(3, 315px);
+  grid-template-rows: 260px 315px 428px;
+  gap: 20px;
+}
+
+@media screen and (width <= 768px) {
+  .section_images__content {
+    max-width: 728px;
+    display: grid;
+    grid-template-columns: 229px 230px 229px;
+    grid-template-rows: 192px 230px 318px;
+  }
+  
+}
+
+@media screen and (width <= 375px) {
+  .section_images__content {
+    max-width: 355px;
+    min-height: 1366px;
+    display: grid;
+    grid-template-columns: 355px;
+    grid-template-rows: auto;
+    grid-template-areas: 
+      "sunset"
+      "icecream"
+      "tape"
+      "books"
+      "street";
+      gap: 10px;
+  }
+}
+
+.left-top-place {
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
+  width: 649px;
+  height: 260px;
+  object-fit: cover;
+}
+
+@media screen and (width <= 768px) {
+  .left-top-place {
+    width: 479px;
+    height: 192px;
+  }
+}
+
+@media screen and (width <= 375px) {
+  .left-top-place {
+    grid-area: sunset;
+    width: 355px;
+    height: 142px;
+  }
+}
+
+.right-top-place {
+  grid-column: 3 / 4;
+  grid-row: 1 / 3;
+  width: 315px;
+  height: 595px;
+  object-fit: cover;
+}
+
+@media screen and (width <= 768px) {
+  .right-top-place {
+    width: 229px;
+    height: 441px;
+  }
+}
+
+@media screen and (width <= 375px) {
+  .right-top-place {
+    grid-area: icecream;
+    width: 355px;
+    height: 355px;
+  }
+}
+
+.center-place {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  width: 315px;
+  height: 315px;
+  object-fit: cover;
+}
+
+@media screen and (width <= 768px) {
+  .center-place {
+    width: 230px;
+    height: 230px;
+  }
+}
+
+@media screen and (width <= 375px) {
+  .center-place {
+    grid-area: books;
+    width: 355px;
+    height: 355px;
+  }
+}
+
+.left-bottom-place {
+  grid-column: 1 / 2;
+  grid-row: 2 / 4;
+  width: 315px;
+  height: 768px;
+  object-fit: cover;
+}
+
+@media screen and (width <= 768px) {
+  .left-bottom-place {
+    width: 229px;
+    height: 568px;
+  }
+}
+
+@media screen and (width <= 375px) {
+  .left-bottom-place {
+    grid-area: tape;
+    width: 355px;
+    height: 237px;
+  }
+}
+
+.right-bottom-place {
+  margin-top: 5px;
+  grid-column: 2 / 4;
+  grid-row: 3 / 4;
+  width: 649px;
+  height: 428px;
+  object-fit: cover;
+}
+
+@media screen and (width <= 768px) {
+  .right-bottom-place {
+    margin-top: 0;
+    width: 479px;
+    height: 318px;
+  }
+}
+
+@media screen and (width <= 375px) {
+  .right-bottom-place {
+    grid-area: street;
+    width: 355px;
+    height: 237px;
+  }
+}
+
+.footer {
+  position: relative;
+  display: flex;
+  max-width: 1024px;
+  height: 780px;
+  padding: 20px;
+  justify-content: center;
+  align-items: center;
+}
+
+@media screen and (375px < width <= 768px) {
+  .footer {
+    min-height: 1024px;
+    padding: 20px;
+  }
+}
+
+@media screen and (width <= 375px) {
+  .footer {
+    max-height: 667px;
+    padding: 10px;
+  }
+}
+
+.footer__title {
+  color: var(--main-title-color);
+  text-shadow: 2px 2px 0px var(--accent-color);
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem) ;
+  font-weight: 700;
+  line-height: 82.5%;
+}
+
+@media screen and (width <= 375px) {
+  .footer__title {
+    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  }
 }
