--- a/styles/light.css
+++ b/styles/light.css
@@ -19,6 +19,32 @@
   --decor-zone-color: #353430;
 }
 
+@media (prefers-color-scheme: light) {
+  :root {
+        /* Дублируем переменные светлой темы */    
+        --background-color: #FFF1F7;
+        --accent-color: #FF8DCB;
+        --text-shadow-color: #FF0070;
+        --main-title-color: #FFC2E6;
+        --content-title-color: #353430;
+        --content-subtitle-color: var(--content-title-color);
+        --content-text-color: var(--content-title-color);
+        --decor-zone-color: #353430;
+    }
+  .header {
+    background-image: url(../images/cover-image-light.png);
+  }
+
+  .header .record__text {
+    color: var(--background-color);
+  }
+
+  .header .record__icon::after {
+    background-color: var(--background-color);
+    filter: drop-shadow(0px 0px 5px var(--background-color));
+  }
+}
+
 .page.theme_light .header {
   background-image: url(../images/cover-image-light.png);
 }
