--- a/styles/style.css
+++ b/styles/style.css
@@ -272,22 +272,23 @@ button:disabled {
 
 .section_explanation {
   max-width: 1024px;
-  max-height: 508px;
+  min-height: 508px;
   margin-top: 60px;
   padding: 0 20px;
   display: flex;
   gap: 20px;
 }
 
-@media screen and (375px < width <=768px) {
+@media screen and (375px < width <= 768px) {
   .section_explanation {
+    max-width: 768px;
     min-height: 648px;
   }
 }
 
-@media screen and (width <=375px) {
+@media screen and (width <= 375px) {
   .section_explanation {
-    width: 1024px;
+    max-width: 375px;
     min-height: 949px;
     margin-top: 40px;
     padding: 0 10px;
@@ -340,8 +341,8 @@ button:disabled {
 }
 
 .section_reasons {
-  width: 1024px;
-  height: 498px;
+  max-width: 1024px;
+  min-height: 498px;
   padding: 0 20px;
   margin-top: 80px;
   margin-bottom: 80px;
@@ -349,14 +350,16 @@ button:disabled {
 
 @media screen and (375px < width <=768px) {
   .section_reasons {
-    height: 755px;
+    max-width: 768px;
+    min-height: 755px;
     margin-bottom: 0;
   }
 }
 
 @media screen and (width <=375px) {
   .section_reasons {
-    height: 1119px;
+    max-width: 375px;
+    min-height: 1119px;
     padding: 0 10px;
     margin-top: 50px;
     margin-bottom: 50px;
@@ -408,8 +411,8 @@ button:disabled {
 }
 
 .section_advices {
-  width: 1024px;
-  height: 1015px;
+  max-width: 1024px;
+  min-height: 1015px;
   padding: 0 20px;
   display: flex;
   gap: 20px;
@@ -418,6 +421,7 @@ button:disabled {
 
 @media screen and (width <=768px) {
   .section_advices {
+    max-width: 768px;
     min-height: 1297px;
   }
 
@@ -425,6 +429,7 @@ button:disabled {
 
 @media screen and (width <=375px) {
   .section_advices {
+    max-width: 375px;
     min-height: 1707px;
     flex-direction: column;
     padding: 0 10px;
@@ -503,9 +508,16 @@ button:disabled {
   margin-bottom: 20px;
 }
 
+@media screen and (width <=768px) {
+  .section_images__title {
+    max-width: 768px;
+    margin-bottom: 10px;
+  }
+}
+
 @media screen and (width <=375px) {
   .section_images__title {
-
+    max-width: 375px;
     margin-bottom: 10px;
   }
 }
@@ -674,6 +686,7 @@ button:disabled {
 
 @media screen and (375px < width <=768px) {
   .footer {
+    max-width: 768px;
     min-height: 1024px;
     padding: 20px;
   }
@@ -681,6 +694,7 @@ button:disabled {
 
 @media screen and (width <=375px) {
   .footer {
+    max-width: 375px;
     max-height: 667px;
     padding: 10px;
   }
