--- a/styles/style.css
+++ b/styles/style.css
@@ -279,14 +279,14 @@ button:disabled {
   gap: 20px;
 }
 
-@media screen and (375px < width <= 768px) {
+@media screen and (375px < width <=768px) {
   .section_explanation {
     max-width: 768px;
     min-height: 648px;
   }
 }
 
-@media screen and (width <= 375px) {
+@media screen and (width <=375px) {
   .section_explanation {
     max-width: 375px;
     min-height: 949px;
@@ -433,6 +433,7 @@ button:disabled {
     min-height: 1707px;
     flex-direction: column;
     padding: 0 10px;
+    margin-bottom: 50px;
   }
 
 }
@@ -511,7 +512,7 @@ button:disabled {
 @media screen and (width <=768px) {
   .section_images__title {
     max-width: 768px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   }
 }
 
@@ -677,8 +678,8 @@ button:disabled {
 .footer {
   position: relative;
   display: flex;
-  max-width: 1024px;
-  height: 780px;
+  max-width: 100vw;
+  height: 100vh;
   padding: 20px;
   justify-content: center;
   align-items: center;
@@ -686,16 +687,16 @@ button:disabled {
 
 @media screen and (375px < width <=768px) {
   .footer {
-    max-width: 768px;
-    min-height: 1024px;
+    /* max-width: 768px; */
+    /* min-height: 1024px; */
     padding: 20px;
   }
 }
 
 @media screen and (width <=375px) {
   .footer {
-    max-width: 375px;
-    max-height: 667px;
+    /* max-width: 375px; */
+    /* max-height: 667px; */
     padding: 10px;
   }
 }
