--- a/styles/light.css
+++ b/styles/light.css
@@ -19,6 +19,7 @@
   --content-text-color: var(--content-title-color);
   --decor-zone-color: #353430;
   --bg-image: url(../images/cover-image-light.png);
+  --hover-color: rgba(50, 49, 45, 0.40);
 }
 
 @media (prefers-color-scheme: light) {
@@ -28,11 +29,13 @@
     --accent-color: #FF8DCB;
     --text-shadow-color: #FF0070;
     --main-title-color: #FFC2E6;
+    --main-text-color: #353430;
     --content-title-color: #353430;
     --content-subtitle-color: #353430;
     --content-text-color: var(--content-title-color);
     --decor-zone-color: #353430;
     --bg-image: url(../images/cover-image-light.png);
+    --hover-color: rgba(50, 49, 45, 0.40);
   }
 
   .page.theme_auto .header .record {
@@ -48,10 +51,6 @@
       text-shadow: 2px 2px 0px var(--accent-color, #FF8DCB);
     }
   }
-}
-
-.page.theme_light .header__theme-menu-button:hover {
-  outline: 1px solid rgba(50, 49, 45, 0.40);
 }
 
 .page.theme_light .header .record__text {
